GNOME Bugzilla – Bug 721739
The positions of the buttons in the headerbar is wrong
Last modified: 2014-01-08 09:11:44 UTC
After the following commit in gtk+, the positions of the buttons in the headerbar is wrong: https://git.gnome.org/browse/gtk+/commit/?id=c3e91c70317b337c72282a1aad68fc82a82bf9e9
Created attachment 265594 [details] [review] headerbar: Fix item positions
Patch applied to master, thank you.